400 character limit in XYZ Function Surface parameters #39924

Closed
opened 2014-04-27 21:17:50 +02:00 by Kyle Ormsby · 8 comments

System Information
Mac OS 10.9.2, Intel HD Graphics 4000 1024 MB

Blender Version
Broken: 2.70, 2014-Mar-19

Short description of error
The x_eq, y_eq, and z_eq fields truncate pasted input to 400 characters.

Exact steps for others to reproduce the error
(1) Copy a long (> 400) character string from a file
(2) Paste into the X equation parameter window
(3) String is truncated to 400 characters

As an example, here is a string I'd like to paste into the X equation field, but it gets truncated as an incomplete formula:

  • 0.200000000000000*((sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))*sin(u)/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) - sin(u))*sin(v)/sqrt(fabs((sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))*cos(u)/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) - cos(u))**2 + fabs(-(sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))sin(u)/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + sin(u))**2 + fabs((sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))**2) - 0.200000000000000cos(u)*cos(v)/sqrt(fabs(-sin(u))**2 + fabs(-cos(u))**2) + cos(u)
**System Information** Mac OS 10.9.2, Intel HD Graphics 4000 1024 MB **Blender Version** Broken: 2.70, 2014-Mar-19 **Short description of error** The x_eq, y_eq, and z_eq fields truncate pasted input to 400 characters. **Exact steps for others to reproduce the error** (1) Copy a long (> 400) character string from a file (2) Paste into the X equation parameter window (3) String is truncated to 400 characters As an example, here is a string I'd like to paste into the X equation field, but it gets truncated as an incomplete formula: - 0.200000000000000*((sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))*sin(u)/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) - sin(u))*sin(v)/sqrt(fabs((sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))*cos(u)/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) - cos(u))**2 + fabs(-(sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))*sin(u)/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + sin(u))**2 + fabs((sin(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1) + cos(u)**2/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))/sqrt(fabs(-sin(u))**2 + fabs(cos(u))**2 + 1))**2) - 0.200000000000000*cos(u)*cos(v)/sqrt(fabs(-sin(u))**2 + fabs(-cos(u))**2) + cos(u)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @KyleO

Added subscriber: @KyleO

Added subscriber: @mont29

Added subscriber: @mont29
Campbell Barton was assigned by Bastien Montagne 2014-04-28 16:45:12 +02:00
Author
Description of the problem and a workaround posted here: http://blender.stackexchange.com/questions/8945/pasting-long-strings-into-the-script-parameters-for-add-3d-function-surface

This issue was referenced by blender/blender-addons-contrib@fc591473b2

This issue was referenced by blender/blender-addons-contrib@fc591473b204ce2449e5d16f7aab480beba7f884

This issue was referenced by blender/blender@fc591473b2

This issue was referenced by blender/blender@fc591473b204ce2449e5d16f7aab480beba7f884

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@fc591473b2.

Closed by commit blender/blender@fc591473b2.
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#39924
No description provided.