Fix T39924: 400 character limit in text fields